# hironaka

./: .gitignore  .hfignore  LICENSE  Makefile  README.md  build.sh  requirements.txt  search_tree.py  setup.cfg  setup.py
.github/workflows/: main.yml
.hfai/: workspace.yml
hironaka/: Points.py  README.md  agent.py  agentThom.py  game.py  gameHironaka.py  gameThom.py  host.py  host_ZeillingerLex.py  hosttestsGergely.py  points.py
hironaka/abs/: Points.py  PointsBase.py  PointsNumpy.py  PointsTensor.py  PointsTorch.py  __init__.py
hironaka/core/: JAXPoints.py  ListPoints.py  NumpyPoints.py  Points.py  PointsBase.py  PointsNumpy.py  PointsTensor.py  README.md  TensorPoints.py  __init__.py  jax_points.py  list_points.py  numpy_points.py  points_base.py  tensor_points.py
hironaka/cpp/: README.md  cppUtil.cpp  cppUtil.h  pointProcessing.cu
hironaka/envs/: HironakaAgentEnv.py  HironakaBase.py  HironakaEnv.py  HironakaHostEnv.py  __init__.py
hironaka/gym_env/: HironakaAgentEnv.py  HironakaBase.py  HironakaHostEnv.py  README.md  __init__.py  (+3 more)
scripts/: search_tree.py
test/: dqn_config_test.yml  dqn_config_test_host_only.yml  jax_config.yml  mcts_test.py  testCpp.py  testCppUtil.cpp  testCppUtil.sh  testFusedGame.py  testGame.py  testGymEnv.py  testJAX.py  testJAXTrainer.py  testPoints.py  testPolicy.py  testSearch.py  testTensorPoints.py  testThom.py  testTorchPoints.py  testTrainer.py  testUtil.py  testZeillinger.py
train/: MCTS.py  README.md  config.yml  dqn_distributed_v0.yml  jax_mcts.py  jax_mcts.yml  jax_mcts_separate_env.py  mcts_config.yml  train_sb3.py
(+91 files in other folders)
