[metadata]
license_file = LICENSE

[pytype]
inputs = hironaka
disable = pyi-error

[flake8]
ignore = W503,W504,E203,E231
exclude =
    .git,
	.hfai,
    __pycache__,
    docs/,
    build,
    venv,
    runs,
    models,
    __init__.py
max-complexity = 15
max-line-length = 127

[isort]
profile = black
line_length = 127
src_paths = hironaka