[metadata]
license_files = LICENSE

[pytype]
inputs = hironaka
exclude =
    **/test*.py
    train/
disable =
    pyi-error


[flake8]
ignore = W503,W504,E203,E231
exclude =
    .git,
    .hfai,
    __pycache__,
    docs/,
    build,
    venv,
    runs,
    models,
    __init__.py,
    test/
max-complexity = 15
max-line-length = 127

[isort]
profile = black
line_length = 127
src_paths = hironaka